# MobileReality

./: .gitignore  CMakeLists.txt  README.md  generator.sh  makefile
code/: CMakeLists.txt  generator.sh
code/data/objects/: simple.mtl  sphere.obj.spheres
code/data/objects/bigguy/: bigguy.mtl
code/data/params/: c910-fisheye.xml  c910.xml  config.xml  logitech.xml
code/libs/Eigen_3.2.1/: CMakeLists.txt
code/libs/gKit/include/: IOFileSystem.h  Mesh.h  ProgramTweaks.h  Triangle.h
code/libs/gKit/src/: ImageIO.cpp  (+2 more)
code/src/app/: CMakeLists.txt  core.cc  core.hh  main.cc
code/src/app/camera/: calibration.cc  calibration.hh  camera.cc  camera.hh
code/src/app/configuration/: configuration.cc  configuration.hh  options.hh
code/src/app/envmap/: envmap.cc  envmap.hh
code/src/app/modules/: module.hh
code/src/app/modules/scanner/: scanner.cc  scanner.hh  symbol.cc  symbol.hh
code/src/app/modules/video/: videodevice.hh
code/src/app/occlusion/: occlusion.cc  occlusion.hh
code/src/app/tools/: timers.cc  timers.hh  tools.cc  tools.hh  tools_mat.cc  tools_mat.hh
code/src/modules/videodevice_uvc/: CMakeLists.txt
code/src/modules/videodevice_uvc/include/: videodevice_uvc.hh
code/src/modules/videodevice_uvc/src/: videodevice_uvc.cc
code/src/precompute_ambient/: core.cc  core.hh  light.cc  light.hh  main.cc
code/src/precompute_spheres/: core.cc  core.hh
code/src/sandbox/: CMakeLists.txt  core.cc  core.hh
code/src/shaders/: CMakeLists.txt  app_background_cubemap.glsl  app_background_frame.glsl  app_build_cubemap.glsl  app_build_softshadow.glsl  app_rendering_object.glsl  app_rendering_softshadow.glsl  precompute_ambient_blender.glsl  precompute_ambient_clamp.glsl  precompute_ambient_light.glsl  precompute_ambient_texture.glsl  precompute_ambient_viewer.glsl  precompute_sphere_cluster.glsl  precompute_sphere_viewer.glsl  sandbox.glsl
data/objects/: simple.mtl
data/objects/bigguy/: bigguy.mtl  bigguy.obj.spheres
data/params/: c910-fisheye.xml  config.xml  logitech.xml
gKit/: CMakeLists.txt
gKit/cmake/: FindOpenEXR.cmake
gKit/include/: App.h  Geometry.h  IOFileSystem.h  Image.h  ImageIO.h  Mesh.h  Orbiter.h  ProgramTweaks.h
gKit/include/Debugger/: AppDebugger.h
gKit/include/GL/: GLBasicMaterial.h  GLBasicMesh.h  GLCompiler.h  GLFramebuffer.h  GLPlatform.h  GLProgram.h  GLProgramUniforms.h  GLQuery.h  GLSLUniforms.h  ProgramName.h
gKit/include/Widgets/: nvGLCoreDraw.h  nvSDLFont.h  nvWidgets.h
gKit/src/: App.cpp  CMakeLists.txt  Image.cpp  ImageIO.cpp  MeshIO.cpp  ProgramManager.cpp
gKit/src/GL/: GLBasicMesh.cpp  GLCompiler.cpp  GLProgram.cpp  GLQuery.cpp  GLTexture.cpp  ProgramName.cpp
gKit/src/Widgets/: nvContext.cpp  nvGLCorePainter.cpp  nvPainter.cpp
libs/gKit/: CMakeLists.txt
libs/gKit/include/: Image.h  Orbiter.h  Triangle.h
libs/gKit/src/: Image.cpp  ProgramTweaks.cpp
params/: default:back.xml
rapport/: rapport.tex  rapport_llncs.tex  repport_llncs.tex  soutenance.tex
rapport/Annexes/: PackagesBeamer.tex  PackagesReport.tex  PackagesReport_llncs.tex  ParametersBeamer.tex  ParametersReport.tex  ParametersReport_llncs.tex  ParametersTikz.tex  biblio.bib
rapport/Extras/: application.tex  calibration.tex  config.tex  cube.tex  octo.tex
rapport/Figures/: app_structure.tex  cubemapFacet.tex  envmap_build.tex  pipeline.tex  shadows.tex  space-opencv.tex  space-opengl.tex  spaceHierarchie.tex
rapport/Parts/: 0a_titlepage.tex  0b_remerciements.tex  0c_introduction.tex  0d_abstract.tex  1_acquisition.tex  1_introduction.tex  2_hierarchie.tex  3_envmap.tex  4_rendu.tex  5_precalcul.tex  6_application.tex  6_results.tex  7_perspectives.tex
src/: CMakeLists.txt  calibration.cc  calibration.hh  camera.cc  camera.hh  configuration.hh  envmap.cc  envmap.hh  main.cc  mattools.cc  mattools.hh  opencv_device.cc  opencv_device.hh  scanner.cc  scanner.hh  symbol.cc  symbol.hh  videodevice.cc  videodevice.hh  zbar_scanner.cc  zbar_scanner.hh
src/app/: CMakeLists.txt  calibration.cc  calibration.hh  camera.cc  camera.hh  configuration.cc  configuration.hh  core.cc  core.hh  envmap.cc  envmap.hh  main.cc  main.cc.legacy  mattools.cc  module.hh  options.hh  scanner.hh  tools.cc  tools.hh  tools_mat.cc  tools_mat.hh  videodevice.hh
src/app/configuration/: configuration.cc
src/app/envmap/: envmap.cc  envmap.hh
src/app/modules/: module.hh
src/app/occlusion/: occlusion.cc  occlusion.hh
src/app/tools/: tools.hh
src/modules/scanner_zbar/: CMakeLists.txt
src/modules/scanner_zbar/include/: scanner_zbar.hh
src/modules/scanner_zbar/src/: scanner_zbar.cc
src/modules/videodevice_opencv/: CMakeLists.txt
src/modules/videodevice_opencv/include/: videodevice_opencv.hh
src/modules/videodevice_opencv/src/: videodevice_opencv.cc
src/modules/videodevice_uvc/UVCLib/: uvc-release.h
src/modules/videodevice_uvc/include/: videodevice_uvc.hh
src/modules/videodevice_uvc/src/: videodevice_uvc.cc
src/precompute/: CMakeLists.txt  core.cc  core.hh  light.cc  main.cc
src/precompute_ambient/: CMakeLists.txt  core.cc  core.hh  light.cc  light.hh
src/precompute_ambient/tools/: timers.cc
src/precompute_spheres/: CMakeLists.txt  LMS.hh  SphereFit.cc  SphereFit.hh  core.cc  core.hh  main.cc  timers.cc
src/precompute_spheres/LMS/: LMS.hh  PointFit.cc  PointFit.hh  SphereFit.hh
src/precompute_spheres/tools/: P.hh
src/shaders/: app_background_cubemap.glsl  app_background_frame.glsl  app_build_cubemap.glsl  app_build_softshadow.glsl  app_rendering.glsl  app_rendering_object.glsl  app_rendering_shadows.glsl  app_rendering_softshadow.glsl  background.glsl  backgroundenvmap.glsl  cuberendering.glsl  materialrendering.glsl  precompute_ambiant.glsl  precompute_ambient.glsl  precompute_ambient_blender.glsl  precompute_ambient_clamp.glsl  precompute_ambient_light.glsl  precompute_ambient_texture.glsl  precompute_ambient_viewer.glsl  precompute_blender.glsl  precompute_clamp.glsl  precompute_light.glsl  precompute_sphere_cluster.glsl  precompute_sphere_viewer.glsl  precompute_viewer.glsl  rendering.glsl
src/shaders/old/: rendering.glsl
(+38 files in other folders)
